--- a/templates/addItem.html
+++ b/templates/addItem.html
@@ -13,13 +13,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
     </head>
     <body>
-        <p class="hhhh">
+        <!-- <p class="hhhh">
             Where the Wolrld goes to shop
             <span>
               Online Auction
             </span>
             &mdash; don't miss just bid &mdash;
-          </p>
+          </p> -->
         <div class="khali">
            
             <div class="wrapper">
