--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <div class="contact-box">
-                <div class="left"></div>
+                <div class="left1"></div>
                 <div class="right">
                 <form action="/register" method="POST">{% csrf_token %}
                     <h2>Online Auction</h2>
@@ -20,7 +20,7 @@
                     <input type="email" class="field" placeholder="Enter Email-id" name="email" required>
                     <input type="password" class="field" placeholder="Enter Password" name="p1" required>
                     <input type="password" class="field" placeholder="Re Enter Password" name="p2" required>
-                    <input type="submit" class="btn" value="submit">
+                    <input type="submit" class="btn" value="Submit">
                     <input type="reset" class="btn" value="Reset">
                 </form>
                 </div>
