--- a/templates/base2.html
+++ b/templates/base2.html
@@ -12,18 +12,18 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
     </head>
     <body>
-        <p class="hhhh">
+        <!-- <p class="hhhh">
             Where the World goes to shop
             <span>
               Online Auction
             </span>
             &mdash; don't miss just bid &mdash;
-          </p>
+          </p> -->
         <div class="khali">    
         <div class="wrapper">
             <div class="ffuk">
                 <ul>
-                    <li><a href="http://127.0.0.1:8000/home" class="left">Home</a></li>
+                    <li><a href="http://127.0.0.1:5050/home" class="left">Home</a></li>
                     <li><a href="logout">Logout</a></li>
                     <!-- <li><a href="#"></a></li> -->
                 </ul>
